--- a/app/views/2dview.html
+++ b/app/views/2dview.html
@@ -59,7 +59,7 @@
 </div>
 
 <div ng-hide="pano || !svgSupport" ng-class="floorplanClass">
-  <div class="mouse-tooltip" style="position:fixed"></div>
+  <div id="mouse-tooltip" style="position:fixed"></div>
 
   <span us-spinner="{radius:30, width:8, length: 16}" spinner-key="spinner-1" spinner-start-active="true"></span> <!-- Spinner that shows up during loading -->
   <i ng-click="toggleFullscreen()" class="btn fullscreen-button" ng-class="buttonClass"></i> <!-- Expand / compress button -->
