--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -88,7 +88,7 @@ body {
     border: 1px solid #e5e5e5;
 }
 
-.mouse-tooltip {
+#mouse-tooltip {
     margin-top: 19px;
     border: 1px solid #e5e5e5;
     border-radius: 5px;
